--- a/AbiBank/AbiBank/Base.lproj/LaunchScreen.storyboard
+++ b/AbiBank/AbiBank/Base.lproj/LaunchScreen.storyboard
@@ -16,20 +16,30 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="AbiBankCircleLogo" translatesAutoresizingMaskIntoConstraints="NO" id="V8U-Bd-feu">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AbiBankCircleLogo" translatesAutoresizingMaskIntoConstraints="NO" id="V8U-Bd-feu">
                                 <rect key="frame" x="87" y="307" width="240" height="218"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="218" id="I8u-XW-EnS"/>
+                                </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Your money safer!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pIZ-1B-obH">
-                                <rect key="frame" x="94" y="552" width="227" height="33"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="27"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your money safer!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pIZ-1B-obH">
+                                <rect key="frame" x="94" y="552" width="226" height="26.5"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
                                 <color key="textColor" red="0.23529411764705882" green="0.31764705882352939" blue="0.40000000000000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="V8U-Bd-feu" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Cig-fh-DHE"/>
+                            <constraint firstItem="pIZ-1B-obH" firstAttribute="centerX" secondItem="V8U-Bd-feu" secondAttribute="centerX" id="Jzx-rG-fNs"/>
+                            <constraint firstItem="V8U-Bd-feu" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="263" id="KBO-Gh-u3P"/>
+                            <constraint firstItem="pIZ-1B-obH" firstAttribute="top" secondItem="V8U-Bd-feu" secondAttribute="bottom" constant="27" id="QbL-KH-ZDc"/>
+                            <constraint firstItem="pIZ-1B-obH" firstAttribute="top" secondItem="V8U-Bd-feu" secondAttribute="bottom" constant="27" id="lNe-gZ-foB"/>
+                            <constraint firstItem="V8U-Bd-feu" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="87" id="n7A-P4-uuA"/>
+                            <constraint firstItem="pIZ-1B-obH" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="94" id="xBS-C7-12M"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
