--- a/AbiBank/AbiBank/AccountSummaryHeaderView.xib
+++ b/AbiBank/AbiBank/AccountSummaryHeaderView.xib
@@ -11,6 +11,9 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AccountSummaryHeaderView" customModule="AbiBank" customModuleProvider="target">
             <connections>
                 <outlet property="contentView" destination="iN0-l3-epB" id="0pU-5i-vnd"/>
+                <outlet property="dateLabel" destination="OgV-H6-c9c" id="wfJ-hb-KCJ"/>
+                <outlet property="nameLabel" destination="uH1-gR-eXL" id="vu6-p8-ICF"/>
+                <outlet property="welcomeLabel" destination="YsG-O1-tV1" id="mm0-jr-P4d"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -44,8 +47,8 @@
                         <constraint firstAttribute="height" constant="100" id="Us1-Uz-jch"/>
                     </constraints>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Jan 23, 2022" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OgV-H6-c9c">
-                    <rect key="frame" x="16" y="112" width="100" height="21"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OgV-H6-c9c">
+                    <rect key="frame" x="16" y="112" width="36" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
